<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="286dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="291dp"
        android:layout_height="52dp"
        android:layout_marginBottom="68dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="293dp"
        android:layout_height="61dp"
        android:layout_marginBottom="28dp"
        android:background="@color/blue"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="294dp"
        android:layout_height="60dp"
        android:layout_marginBottom="212dp"
        android:background="@color/blue"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="208dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        tools:ignore="TextSizeCheck"
        tools:text="SURAT DESA APP" />


</androidx.constraintlayout.widget.ConstraintLayout>