<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_custom">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/back_arrow_foreground" />

    <TextView
        android:id="@+id/titleNik"
        android:layout_width="255dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/titleNik"
        android:textColor="@color/blue_custom"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <EditText
        android:id="@+id/nik"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="35100000XXXXX"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_custom_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNik"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,RtlSymmetry,TextContrastCheck" />

    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="budi@gmail.com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_custom_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/titleEmail"
        android:layout_width="255dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/titleEmail"
        android:textColor="@color/blue_custom"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <EditText
        android:id="@+id/nomorhp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="628190000XXX"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_custom_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNomorHp"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/titleNomorHp"
        android:layout_width="255dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/titleNomorHP"
        android:textColor="@color/blue_custom"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="Jln Dulu Yuk"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_custom_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleAlamat"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/titleAlamat"
        android:layout_width="255dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/titleAlamat"
        android:textColor="@color/blue_custom"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomorhp"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <Button
        android:id="@+id/register"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="DAFTAR"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879"
        tools:ignore="HardcodedText,DuplicateSpeakableTextCheck" />


    <TextView
        android:id="@+id/titleName"
        android:layout_width="255dp"
        android:layout_height="27dp"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:text="@string/titleName"
        android:textColor="@color/blue_custom"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nik"
        app:layout_constraintVertical_bias="0.031"
        tools:ignore="RtlHardcoded,TextSizeCheck" />

    <EditText
        android:id="@+id/name"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="Budi Tabudi"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_custom_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill,HardcodedText,RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="85dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="DAFTAR"
        android:textColor="@color/blue_custom"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>